--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 ---
 layout: home
-title: BinDabei.app
-subtitle: Verabredungen Super-Simple!
+title: ijoin.app
+subtitle: Randevular Süper Basit!
+language: tr
 ---
